Initial commit working micro frontend

--- a/apps/chatwidget/src/app/app.component.html
+++ b/apps/chatwidget/src/app/app.component.html
@@ -1,1 +1,2 @@
-<chatwidget-nx-welcome></chatwidget-nx-welcome>
+<!-- <chatwidget-nx-welcome></chatwidget-nx-welcome> -->
+<router-outlet></router-outlet>
