Started with adding chat add functionality, working api call, but the page button stays hidden

--- a/libs/chat/src/lib/chat.component.html
+++ b/libs/chat/src/lib/chat.component.html
@@ -1,5 +1,7 @@
 <div id="chat">
-    <stream-channel-list></stream-channel-list>
+    <stream-channel-list>
+      <!-- <button (click)="addChannel()">Add channel</button> -->
+    </stream-channel-list>
     <stream-channel>
     <stream-channel-header></stream-channel-header>
     <stream-message-list></stream-message-list>
