--- a/libs/chat/src/lib/chat.component.scss
+++ b/libs/chat/src/lib/chat.component.scss
@@ -11,6 +11,7 @@ html {
 }
 
 body {
+  overflow: hidden;
   margin: 0;
   height: 100%;
 }
@@ -34,10 +35,26 @@ body {
     width: 20%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+    scrollbar-width: 1px;
+    scrollbar-color: #0050EF #f5f5f5;
+  } 
+
+  .str-chat__channel-list-messenger {
+    width: 100%;
+    overflow-y: scroll; /* Enable scrolling */
+    scrollbar-width: none; /* For Firefox */
+    -ms-overflow-style: none;  /* For Internet Explorer and Edge */
+  }
+
+  .str-chat__channel-list-messenger::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari and Opera */
   }
 
   stream-channel-list {
     width: 100%;
+    max-height: 90%;
+    overflow: hidden;
   }
 
   stream-channel {
