--- a/libs/auth/src/lib/auth.component.html
+++ b/libs/auth/src/lib/auth.component.html
@@ -1,8 +1,13 @@
-<div *ngIf="auth.isAuthenticated$ | async; else loginButton">
-    <button (click)="logout()">Logout</button>
+<div id="container">
+  <div id="loader" *ngIf="(isAuthenticated$ | async) === false"></div>
+
+  <div id="buttons">
+    <div *ngIf="auth.isAuthenticated$ | async; else loginButton">
+      <button (click)="logout()">Logout</button>
+    </div>
+    <ng-template #loginButton>
+      <button (click)="login()">Login</button>
+      <button (click)="signup()">Sign up</button>
+    </ng-template>
   </div>
-  <ng-template #loginButton>
-    <button (click)="login()">Login</button>
-    <button (click)="signup()">Sign up</button>
-</ng-template>
-  
+</div>
