--- a/libs/chat/src/lib/chat.component.scss
+++ b/libs/chat/src/lib/chat.component.scss
@@ -20,41 +20,36 @@ body {
   display: flex;
   height: 100%;
   
-  #add-button {
-    width: auto;
-    height: 40px;
-    bottom: 0px;
-    margin: 20px;
-    color: white;
-    background-color: #0050EF;
-    border: none;
-    border-radius: 20px;
-  }
-
   #channel-list-container {
     width: 20%;
+    overflow-y: auto;
+    overflow-x: hidden;
     display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    scrollbar-width: 1px;
-    scrollbar-color: #0050EF #f5f5f5;
-  } 
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column; 
 
-  .str-chat__channel-list-messenger {
-    width: 100%;
-    overflow-y: scroll; /* Enable scrolling */
-    scrollbar-width: none; /* For Firefox */
-    -ms-overflow-style: none;  /* For Internet Explorer and Edge */
-  }
+    #channel-list-bar {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      min-height: 10%;
+      height: 85%
+    }
 
-  .str-chat__channel-list-messenger::-webkit-scrollbar {
-    display: none; /* For Chrome, Safari and Opera */
+    #add-button {
+      width: 60%;
+      padding: 10px;
+      margin-top: 20px;
+      color: white;
+      background-color: #0050EF;
+      border: none;
+      border-radius: 20px;
+    }
   }
 
   stream-channel-list {
     width: 100%;
-    max-height: 90%;
-    overflow: hidden;
   }
 
   stream-channel {
