--- a/libs/chat/src/lib/chat.component.html
+++ b/libs/chat/src/lib/chat.component.html
@@ -1,6 +1,6 @@
 <div id="chat">
   <div id="channel-list-container">
-    
+    <chatwidget-auth></chatwidget-auth>
     <ngx-simplebar id="channel-list-bar">
       <stream-channel-list>
       </stream-channel-list>
