--- a/libs/chat/src/lib/chat.component.scss
+++ b/libs/chat/src/lib/chat.component.scss
@@ -28,19 +28,23 @@ body {
     justify-content: flex-start;
     align-items: center;
     flex-direction: column; 
+    min-width: 20%;
+
 
     #channel-list-bar {
       width: 100%;
       display: flex;
       flex-direction: column;
       min-height: 10%;
-      height: 85%
+      height: 85%;
     }
 
     #add-button {
-      width: 60%;
+      width: fit-content  ;
       padding: 10px;
-      margin-top: 20px;
+      padding-left: 10vh;
+      padding-right: 10vh;
+      margin: 20px;
       color: white;
       background-color: #0050EF;
       border: none;
