Some more styling and code cleanup, also added consult library

--- a/libs/chat/src/lib/add-channel/add-channel.component.scss
+++ b/libs/chat/src/lib/add-channel/add-channel.component.scss
@@ -71,6 +71,7 @@
                     color: white;
                     background-color: #0050EF;
                     margin-right: 10px;
+                    text-transform: uppercase;
                 }
 
                 label {
