--- a/libs/auth/src/lib/auth.component.html
+++ b/libs/auth/src/lib/auth.component.html
@@ -6,7 +6,7 @@
       <button (click)="logout()">Logout</button>
     </div>
     <ng-template #loginButton>
-      <button (click)="login()">Login</button>
+      <button mat-button (click)="login()">Login</button>
       <button (click)="signup()">Sign up</button>
     </ng-template>
   </div>
