--- a/libs/chat/src/lib/chat.component.html
+++ b/libs/chat/src/lib/chat.component.html
@@ -5,7 +5,7 @@
       <stream-channel-list>
       </stream-channel-list>
     </ngx-simplebar>
-    <button id="add-button" (click)="addChannel()">Add channel</button>
+    <button id="add-button" (click)="addChannel()">Add channel <span id="plus-icon">+</span></button>
   </div>
   
     
