--- a/libs/chat/src/lib/chat.component.scss
+++ b/libs/chat/src/lib/chat.component.scss
@@ -42,13 +42,26 @@ body {
     #add-button {
       width: fit-content  ;
       padding: 10px;
-      padding-left: 10vh;
-      padding-right: 10vh;
+      padding-left: 7vh;
+      padding-right: 5vh;
       margin: 20px;
       color: white;
       background-color: #0050EF;
       border: none;
       border-radius: 20px;
+    }
+
+    #plus-icon {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      width: 20px;
+      height: 20px;
+      border: 2px solid gray;
+      color: gray;
+      border-radius: 50%;
+      margin-right: 5px;
+      font-size: 14px;
     }
   }
 
