--- a/libs/chat/src/lib/chat.component.html
+++ b/libs/chat/src/lib/chat.component.html
@@ -5,11 +5,11 @@
       <stream-channel-list>
       </stream-channel-list>
     </ngx-simplebar>
-    <button id="add-button" (click)="addChannel()">Add channel <span id="plus-icon">+</span></button>
+    <button id="add-button" *ngIf="showAddButton" (click)="addChannel()">Add channel <span id="plus-icon">+</span></button>
+    <!-- <button id="add-button" (click)="addChannel()">Add channel <span id="plus-icon">+</span></button> -->
   </div>
-  
     
-    <stream-channel>
+  <stream-channel>
     <stream-channel-header></stream-channel-header>
     <stream-message-list></stream-message-list>
     <stream-notification-list></stream-notification-list>
