--- a/libs/chat/src/lib/chat.component.scss
+++ b/libs/chat/src/lib/chat.component.scss
@@ -36,7 +36,7 @@ body {
       display: flex;
       flex-direction: column;
       min-height: 10%;
-      height: 85%;
+      // height: 85%;
     }
 
     #add-button {
