Attempt at fixing angular build files

--- a/libs/chat/src/lib/chat.component.html
+++ b/libs/chat/src/lib/chat.component.html
@@ -8,6 +8,8 @@
     <button id="add-button" *ngIf="showAddButton" (click)="addChannel()">Add channel <span id="plus-icon">+</span></button>
     <!-- <button id="add-button" (click)="addChannel()">Add channel <span id="plus-icon">+</span></button> -->
   </div>
+
+  <button id="declare-button" (click)="addChannel()">Declare</button>
     
   <stream-channel>
     <stream-channel-header></stream-channel-header>
