--- a/libs/chat/src/lib/chat.component.html
+++ b/libs/chat/src/lib/chat.component.html
@@ -9,7 +9,7 @@
     <!-- <button id="add-button" (click)="addChannel()">Add channel <span id="plus-icon">+</span></button> -->
   </div>
 
-  <button id="declare-button" (click)="addChannel()">Declare</button>
+  <button id="declare-button" *ngIf="showDeclareButton" (click)="getConsult()">Declare</button>
     
   <stream-channel>
     <stream-channel-header></stream-channel-header>
