--- a/libs/chat/src/lib/chat.component.scss
+++ b/libs/chat/src/lib/chat.component.scss
@@ -80,22 +80,49 @@ body {
     border-radius: 20px;
   }
 
-  #consults-button {
+  #consult_div {
     position: absolute;
-    width: fit-content;
-    z-index: 1; // button is otherwise behind the chat
+    z-index: 1;
     top: 0;
     right: 0;
-    padding: 3px;
     margin: 20px;
-    color: white;
-    background-color: #0050EF;
-    border: none;
-    border-radius: 20px;
+  
+    #consults-button {
+      width: fit-content;
+      z-index: 1;
+      padding: 3px;
+      color: white;
+      background-color: #0050EF;
+      border: none;
+      border-radius: 20px;
+      position: relative;
+  
+      // &:before {
+      //   content: "";
+      //   position: absolute;
+      //   top: -10px;
+      //   left: -10px;
+      //   width: 20px;
+      //   height: 16px;
+      //   border: 2px solid black;
+      //   border-bottom-left-radius: 10px;
+      //   border-bottom-right-radius: 10px;
+      //   border-top-left-radius: 10px;
+      //   border-top-right-radius: 10px;
+      // }
+  
+      // &:after {
+      //   content: "";
+      //   position: absolute;
+      //   top: 6px;
+      //   left: 8px;
+      //   width: 4px;
+      //   height: 8px;
+      //   background-color: black;
+      // }
+    }
   }
-
-
-
+  
   stream-channel-list {
     width: 100%;
   }
