--- a/libs/chat/src/lib/chat.component.scss
+++ b/libs/chat/src/lib/chat.component.scss
@@ -74,6 +74,7 @@ body {
     padding-left: 5vh;
     padding-right: 5vh;
     margin: 20px;
+    margin-right: 40px;
     color: white;
     background-color: #0050EF;
     border: none;
@@ -96,30 +97,6 @@ body {
       border: none;
       border-radius: 20px;
       position: relative;
-  
-      // &:before {
-      //   content: "";
-      //   position: absolute;
-      //   top: -10px;
-      //   left: -10px;
-      //   width: 20px;
-      //   height: 16px;
-      //   border: 2px solid black;
-      //   border-bottom-left-radius: 10px;
-      //   border-bottom-right-radius: 10px;
-      //   border-top-left-radius: 10px;
-      //   border-top-right-radius: 10px;
-      // }
-  
-      // &:after {
-      //   content: "";
-      //   position: absolute;
-      //   top: 6px;
-      //   left: 8px;
-      //   width: 4px;
-      //   height: 8px;
-      //   background-color: black;
-      // }
     }
   }
   
